Working version
---------------

(Changes that can break existing programs are marked with a "*")

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

- #13429: add `Unix.sigwait`, a binding to the `sigwait` system call;
  implement `Thread.wait_signal` using `Unix.sigwait`, and
  `Thread.sigmask` using `Unix.sigprocmask`.
  (Xavier Leroy, review by Antonin Décimo, Gabriel Scherer, Miod Vallat)

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

- #13428: support dump=[source | parsetree | lambda | ... | cmm | ...]
  in OCAMLRUNPARAM
  (Gabriel Scherer, review by Vincent Laviron)

### Internal/compiler-libs changes:

- #13425: undocumented -dmatchcomp flag for the debug
  output of the pattern-matching compiler
  (Gabriel Scherer, review by Vincent Laviron and Nicolás Ojeda Bär)

### Build system:

### Bug fixes:

- #13408: Fix misplaced debug runtime assertion triggerable by a race
  between domain exit and backup thread
  (Miod Vallat and Gabriel Scherer, report by Jan Midtgaard)

OCaml 5.3.0
___________

(Changes that can break existing programs are marked with a "*")

### Restored backend:

- #12954: Restore the MSVC port
  (David Allsopp, Antonin Décimo, Samuel Hym, and Miod Vallat, review by Nicolás
   Ojeda Bär)

- #13093: Allow building the MSVC port with clang-cl.
  (Antonin Décimo, review by Nicolás Ojeda Bär, Samuel Hym,
   David Allsopp and Sébastien Hinderer)

### Language features:

- #12828, #13282: Add short syntax for dependent functor types `(X:A) -> ...`
  (Jeremy Yallop, review by Nicolás Ojeda Bär and Gabriel Scherer)

- Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.